--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 Cutest Baby 
             </div>
             <div class="side heading">on Planet Earth</div>
-            <p class="info">Cuteness is a quality that evokes feelings of affection and protectiveness.
-              It is often associated with features like large eyes, round faces, and small size.</p>
+            <p class="info">Cuteness is a quality that evokes feelings of affection <br> and protectiveness 
+              It is often associated with features like large eyes, <br> round faces, and small size.</p>
            
         </div>
     </section>
